@@ -1,3 +1,7 @@
+2010-03-22 Homer Xing <homer.xing@gmail.com>
+
+    * Disable FoxitReader.
+
 2010-03-20 Homer Xing <homer.xing@gmail.com>
 
     * Remove "Offline installation" functionality.
